# Sich

./: meson.build  meson_options.txt
include/: meson.build
include/sich/: config.h  deprecated.h  meson.build  reproducibility.h  sich.h  version.h  visibility.h
perfs/: meson.build  perf_sich.c
scripts/: check_reproducibility.py  gitutils.py  repository_hooks.py  semverbuildmetadata.py  vcsutils.py
src/: meson.build  src1.c  src2.c  src2.h  version.c
src/util/: meson.build  rng.c  rng.h
tests/: meson.build  test_sich.cpp
